I ate too much Java