@@ -1,15 +1,6 @@
-import java.util.ArrayList;
-import java.util.HashMap;
-
 void main() {
-  var hash = new HashMap<Integer, String>();
-  var li = Arrays.asList("One", "Two", "Three");
-  for(int i = 0; i < 3; i++) {
-    hash.put(i+1, li.get(i));
-  }
-  var eSet = hash.entrySet();
-  IO.println(eSet);
-
-  hash.remove(2);
-  IO.println(eSet);
+  int[] arr = {1, 4, 5, 6};
+  var s = List.of(arr).stream().map(String::valueOf).collect(Collectors.joining(", "));
+  System.out.println(s);
+  throw new RuntimeException(s);
 }
